fix: missing background gradient in about section

--- a/src/style.scss
+++ b/src/style.scss
@@ -204,7 +204,7 @@ section#hero {
 section#about {
   padding: 18rem 4rem;
 
-  background-image: url("../public/assets/imgs/bg-about.png");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0.78) 100%),url("../public/assets/imgs/bg-about.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
